# Logitech-Led-Profile-Manager

./: Cargo.toml  Readme.md
src/: keyboard.rs  lookout.rs  main.rs
src/keyboard/: layout.rs  mod.rs
src/keyboard/klogi/: Cargo.toml
src/keyboard/klogi/src/: c32b00000000_0005.json  keys.rs  lib.rs  model.rs
src/keyboard/logitech-led/logitech-led-sys/src/: lib.rs
src/keyboard/logitech-led/src/: lib.rs
src/plugins/: breathe.rs  fill.rs  k2000.rs  maths.rs  mod.rs  progressbar.rs  wave.rs
src/settings/: mod.rs  test.yml
winamp/: Cargo.toml
winamp/src/: lib.rs
winamp/winamp_sys/: Cargo.toml  cmd.sh
winamp/winamp_sys/src/: from_bindgen.rs  lib.rs
