[package]
name = "progress-to-keyboard"
version = "0.1.0"
authors = ["Suppr <suppr@lacase.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logitech-led = {path = 'D:\temp\logitech-led-master', version = "1.0.0"}
winapi = { version = "0.3.8", features = ["winuser", "windef"] }
winamp = {path = "winamp", version = "0.1.0"}
#user32-sys = "0.2.0"
