[package]
name = "progress-to-keyboard"
version = "0.1.0"
authors = ["Suppr <suppr@lacase.local>"]
edition = "2018"

[dependencies]
logitech-led = {path = 'src/keyboard/logitech-led', version = "1.0.0"}
winapi = { version = "0.3.8", features = ["winuser", "windef", "winnt"] }
winamp = {path = "winamp", version = "0.1.0"}
klogi = {path = "src/keyboard/klogi", version = "0.1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pastel = "0.7.1"
regex= "1.3.9"