[package]
name = "winamp"
version = "0.1.0"
authors = ["Suppr <suppr@lacase.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winamp_sys = {path= "winamp_sys", version = "0.1.0"}
winapi = { version = "0.3.8", features = ["winuser", "windef"] }